service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-app
spec:
  type: ClusterIP
  selector:
    app: demo-web-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
