route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-web-app
spec:
  tls:
    termination: edge
  to:
    name: demo-web-app
    kind: Service
    weight: 100
  wildcardPolicy: None
